# toolchains

./: .emmyrc.json  .gdbinit  .gitignore  CONTRIBUTORS.md  LICENCE  LICENCE.md  README.md  build_gcc.md  build_llvm.md  gcc_environment.py  pyproject.toml  python_config.py  python_config.sh  requirements.txt  x86_64-linux-gnu-host-arm-none-eabi-target-gcc.md  x86_64-linux-gnu-host-x86_64-w64-mingw32-cross-gcc.md  x86_64-linux-gnu-host-x86_64-w64-mingw32-cross-gcc.py  x86_64-linux-gnu-host-x86_64-w64-mingw32-target-gcc.md  x86_64-linux-gnu-native-gcc.md  x86_64-linux-gnu-native-gcc.py  x86_64-linux-gnu-native-gcc14.md  x86_64-w64-mingw32-host-arm-none-eabi-target-gcc.md  x86_64-w64-mingw32-native-gcc.md  x86_64-w64-mingw32-native-gcc.py  x86_64_linux_gnu_host_arm_none_eabi_target_gcc.py  x86_64_linux_gnu_host_x86_64_elf_target_gcc.py  x86_64_linux_gnu_host_x86_64_w64_mingw32_target_gcc.py  x86_64_linux_gnu_native_gcc.py  x86_64_w64_mingw32_host_arm_none_eabi_target_gcc.py  x86_64_w64_mingw32_native_gcc.py
readme/: sysroot.md  x86_64-linux-gnu-clang.md  x86_64-linux-gnu-host-aarch64-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-arm-linux-gnueabi-target-gcc.md  x86_64-linux-gnu-host-arm-linux-gnueabihf-target-gcc.md  x86_64-linux-gnu-host-arm-none-eabi-target-gcc.md  x86_64-linux-gnu-host-i686-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-i686-w64-mingw32-target-gcc.md  x86_64-linux-gnu-host-loongarch64-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-loongarch64-loongnix-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-riscv64-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-x86_64-elf-target-gcc.md  x86_64-linux-gnu-host-x86_64-ubuntu2004-linux-gnu-target-gcc.md  x86_64-linux-gnu-host-x86_64-w64-mingw32-target-gcc.md  x86_64-linux-gnu-native-gcc.md  x86_64-w64-mingw32-clang.md  x86_64-w64-mingw32-host-aarch64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-arm-linux-gnueabi-target-gcc.md  x86_64-w64-mingw32-host-arm-linux-gnueabihf-target-gcc.md  x86_64-w64-mingw32-host-arm-none-eabi-target-gcc.md  x86_64-w64-mingw32-host-i686-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-i686-w64-mingw32-target-gcc.md  x86_64-w64-mingw32-host-loongarch64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-loongarch64-loongnix-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-riscv64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-host-x86_64-elf-target-gcc.md  x86_64-w64-mingw32-host-x86_64-linux-gnu-target-gcc.md  x86_64-w64-mingw32-native-gcc.md
script/: .gdbinit  aarch64-libm.a.py  auto_gcc.py  build_gcc.py  common.py  download.py  download_source.py  gcc_environment.py  llvm_environment.py  modifier.py  pexports-x86_64-w64-mingw32.txt  python_config.py  python_config.sh  sysroot.py  x86_64-libm.a.py  x86_64-linux-gnu-clang.cmake  x86_64_linux_gnu_clang.py  (+27 more)
xmake/: rule.lua  (+5 more)
(+29 files in other folders)
